# ci-confluence

./: .gitignore  README.md  SPEC.md  manifest.json  pyproject.toml
fixture/: manifest-valid.json  manifest.json
fixture/snippets/: bad.py  bad.sh  ok.py  ok.sh  transcript.txt
notes/: iter1-db-extraction-findings.md  iter1-slurm-recon.md
snippets/267391733/: 001.sh  002.txt  003.txt  004.py  005.py  006.py  007.py  008.py  009.sh  010.sh  011.py  012.txt  013.py  014.py  015.txt  016.py  017.py  018.txt  019.py  020.py  021.py  022.py  023.py  024.py  025.py  026.sh  027.sh  028.sh  029.sh  030.sh  031.py  032.sh  033.sh  034.sh  035.sh  036.sh  037.sh  038.py
snippets/332667737/: 001.txt  002.sh  003.sh
snippets/337058697/: 001.sh  002.sh  003.py  004.txt  005.txt  006.txt  007.py  008.txt  009.txt  010.txt
snippets/337080549/: 001.py  002.py  003.txt  004.py  005.py  006.txt  007.py  008.py  009.txt  010.txt
snippets/363436775/: 001.sh  002.sh  003.py  004.py
snippets/395219687/: 001.sh  002.sh
snippets/401977822/: 001.py  002.py  003.py
snippets/412910044/: 001.sh  002.sh  003.sh
