[project]
name = "ci-confluence"
version = "0.1.0"
description = "CI for psana Confluence code snippets: extraction + tiered parse/lint checks."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff==0.15.19",
]

[tool.ruff]
target-version = "py312"
cache-dir = "var/ruff"
